# py-search

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
libs/: exception.py
libs/ragsearch/: hello_world.py
libs/ragsearch/pipeline/retrieval/: __init__.py  duckdb_retriever.py  factory.py
libs/ragsearch/pipeline/retrieval/structured/: __init__.py  duckdb_retriever.py
libs/ragsearch/pipeline/retrieval/unstructured/: __init__.py  langchain_loader.py  llamaindex_loader.py
libs/ragsearch/retrieval/: base.py  structured.py  unstructured.py
libs/tests/: sample.txt  test_duckdb_retriever.py  test_factory.py  test_hello_world.py  test_retrieval.py  test_structured.py  test_unstructured.py
